# PRISM

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
docs/plans/: 2026-03-04-skill-quality-gate-design.md  2026-03-04-skill-quality-gate.md
evaluate/aime2025/: __init__.py  __main__.py  dataset.py  evaluate.py  seeds.py
evaluate/hotpot_qa/: __main__.py  dataset.py  evaluate.py  seeds.py
examples/: run_aime2025.py  run_prism.py
prism/: __init__.py  engine.py  utils.py
prism/ace_integration/: __init__.py  bridge.py
prism/assembler/: __init__.py  assembler.py
prism/gepa_integration/: __init__.py  adapter.py
prism/lifecycle/: __init__.py  curator.py  reflector.py
prism/skill_library/: __init__.py  library.py  skill.py
prism/task_index/: __init__.py  index.py
references/: ace.md  dc.md  gepa.md  skill_injection.md
