[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "PRISM: Self-Evolving Skill Library combining GEPA and ACE"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
embedding = ["numpy>=1.24.0", "sentence-transformers>=2.2.0"]
gepa = ["gepa"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "pyright>=1.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.10"
